Działająca strona logowania, zapisywanie JWT

--- a/ankiety-frontend/src/app/user/login/login.component.html
+++ b/ankiety-frontend/src/app/user/login/login.component.html
@@ -7,7 +7,7 @@
       <div class="col-md-10 offset-md-1">
         <form #form='ngForm' class="mb-4" autocomplete="off" (submit)="onSubmit(form)">
           <div class="form-group">
-            <label>Nazwa użytkownika</label>
+            <label>Adres email</label>
             <input class="form-control" #UserName='ngModel' name="UserName" [(ngModel)]="formModel.UserName" required>
           </div>
 
