--- a/ankiety-frontend/src/app/shared/navbar/navbar.component.css
+++ b/ankiety-frontend/src/app/shared/navbar/navbar.component.css
@@ -10,7 +10,7 @@ a {
 }
 
 .custom-navbar {
-    background-color: #0e4dac;
+    background-color: #255255;
     position: fixed;
     top: 0;
     left: 0;
