--- a/ankiety-frontend/src/app/user/dashboard/admin/admin.component.css
+++ b/ankiety-frontend/src/app/user/dashboard/admin/admin.component.css
@@ -1,5 +1,5 @@
 #sidebar {
-    background-color: #346bbe;
+    background-color: #255255a2;
     border-radius: 5px;
-    /*min-height: 625px;*/
+    min-height: 700px;
 }
