--- a/ankiety-frontend/src/app/shared/navbar/navbar.component.html
+++ b/ankiety-frontend/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="constant-margin">
 <nav class="navbar custom-navbar" id="navbar">
-    <a class="navbar-brand text-white">Ankiety Online</a>
+    <a class="navbar-brand text-white" routerLink="">Ankiety Online</a>
     <div class="row">
         <span class="username">Użytkownik: {{getUserEmail()}}</span>
         <button class="nav_btn" (click)="onChangePassword()" title="Zmień hasło">
