--- a/ankiety-frontend/src/app/user/registration/registration.component.html
+++ b/ankiety-frontend/src/app/user/registration/registration.component.html
@@ -7,9 +7,9 @@
                 <mat-form-field appearance="outline">
                     <input matInput formControlName="Email" autocomplete="off">
                 </mat-form-field>
-                <label class="custom-text"
-                       *ngIf="service.formModel.get('Email').touched && service.formModel.get('Email').errors?.pattern">Niepoprawny
-                    adres email.</label>
+                <label class="text"
+                       *ngIf="service.formModel.get('Email').touched && service.formModel.get('Email').errors?.pattern">
+                       Niepoprawny adres email.</label>
             </div>
         </div>
 
@@ -57,8 +57,10 @@
 
         <div class="form-row" style="margin-top: 20px;">
             <div class="form-group col-md-8 offset-md-2">
-                <button class="btn btn-lg btn-block btn-green" [disabled]="!service.formModel.valid">Dodaj
-                    użytkownika</button>
+                <button class="btn btn-lg btn-block btn-success" 
+                [disabled]="!service.formModel.valid">
+                    Dodaj użytkownika
+                </button>
             </div>
         </div>
     </form>
