modyfikacja wyglądu panelu logowania, komunikatów toastr

--- a/ankiety-frontend/src/app/user/login/login.component.html
+++ b/ankiety-frontend/src/app/user/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div class="wrapped-div">
-    <div class="text-center">
+    <div class="title text-center">
       <h2>System ankietowy</h2>
     </div>
     <div class="row" style="margin-top: 20px;">
