--- a/ankiety-frontend/src/app/user/login/login.component.css
+++ b/ankiety-frontend/src/app/user/login/login.component.css
@@ -1,23 +1,137 @@
-.wrapper {
-    height: 100%;
-    width: 100%;
-    background-image: linear-gradient(to bottom right, #104549e1,  #fdfffff6);
-}
-.wrapped-div{
-    position: fixed;
-    top: 25%;
-    left: 35%;
-    margin-top: -50px;
-    margin-left: -100px;
-    width: 50%;
-    background-color: rgb(255, 255, 255);
-    border-top: rgb(112, 112, 112) 1px solid;
-    border-left: rgb(112, 112, 112) 1px solid;
-    border-right: #255255 3px solid;
-    border-bottom: #255255 3px solid;
-    border-radius: 1%;
+* {
+	box-sizing: border-box;
 }
 
-.title{
-    padding-top: 3%;
+h1 {
+	font-weight: bold;
+	margin: 0;
+}
+
+p {
+	font-size: 14px;
+	font-weight: 100;
+	line-height: 20px;
+	letter-spacing: 0.5px;
+	margin: 20px 0 30px;
+}
+
+span {
+	font-size: 12px;
+}
+
+a {
+	color: #333;
+	font-size: 14px;
+	text-decoration: none;
+	margin: 15px 0;
+}
+
+button {
+	border-radius: 20px;
+	border: 1px solid #63A4FF;
+	background-color:#63A4FF;
+	color: #FFFFFF;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 12px 45px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	transition: transform 80ms ease-in;
+}
+
+form {
+	background-color: #FFFFFF;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 50px;
+	height: 100%;
+	text-align: center;
+}
+
+input {
+	background-color: #eee;
+	border: none;
+	padding: 12px 15px;
+	margin: 8px 0;
+	width: 100%;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+	background-color: #fff;
+	border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+	overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.form-container {
+	position: absolute;
+	top: 0;
+	height: 100%;
+}
+
+.log-in-container {
+	left: 0;
+	width: 50%;
+	z-index: 2;
+}
+
+.overlay-container {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: 50%;
+	height: 100%;
+}
+
+.overlay {
+	background: -webkit-linear-gradient(to right, #83EAF1,#63A4FF);
+	background: linear-gradient(to right,#83EAF1,#63A4FF);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: 0 0;
+	color: #FFFFFF;
+	position: relative;
+	left: -100%;
+	height: 100%;
+	width: 200%;
+}
+
+.overlay-panel {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 40px;
+	text-align: center;
+	top: 0;
+	height: 100%;
+	width: 50%;
+}
+
+
+.overlay-right {
+	right: 0;
+}
+
+
+.social-container {
+	margin: 50px 0;
+}
+
+.social-container a {
+	border: 1px solid #DDDDDD;
+	border-radius: 50%;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 5px;
+	height: 40px;
+	width: 40px;
 }
