--- a/ankiety-frontend/src/app/user/edit-user/edit-user.component.html
+++ b/ankiety-frontend/src/app/user/edit-user/edit-user.component.html
@@ -24,6 +24,6 @@
   <div class="text-center">
     <button class="btn btn-success" (click)="onSubmit()"
     [disabled]="!textChanged() || isSomeFieldEmpty()">
-      Edytuj pytanie</button>
+      Edytuj</button>
   </div>
 </div>
