Obsługa ankiet z ukrytymi wartościami

--- a/ankiety-frontend/src/app/questions/add-choice/add-choice.component.html
+++ b/ankiety-frontend/src/app/questions/add-choice/add-choice.component.html
@@ -42,8 +42,8 @@
 
     <div class="text-center">
       <button class="btn btn-primary" (click)="addOption()">Dodaj opcję</button>
-      <button class="btn btn-success" (click)="submitForm()" [disabled]="!questionForm.valid">Dodaj
-        pytanie</button>
+      <button class="btn btn-success" (click)="submitForm()" [disabled]="!questionForm.valid">
+        Dodaj pytanie</button>
     </div>
 
   </form>
