--- a/ankiety-frontend/src/app/surveys/new-survey/new-survey.component.html
+++ b/ankiety-frontend/src/app/surveys/new-survey/new-survey.component.html
@@ -23,8 +23,8 @@
     <p>Ankieta z ukrytymi wartościami:</p>
     <div class="text-center">
       <mat-radio-group [(ngModel)]="survey.type">
-        <mat-radio-button value="HiddenValues" class="space">Tak</mat-radio-button>
-        <mat-radio-button value="Normal" class="space">Nie</mat-radio-button>
+        <mat-radio-button value="2" class="space">Tak</mat-radio-button>
+        <mat-radio-button value="1" class="space">Nie</mat-radio-button>
       </mat-radio-group>
     </div>
   </div>
