Front strony głównej systemu ankiety

--- a/ankiety-frontend/src/app/shared/navbar/navbar.component.css
+++ b/ankiety-frontend/src/app/shared/navbar/navbar.component.css
@@ -10,7 +10,7 @@ a {
 }
 
 .custom-navbar {
-    background-color: #255255;
+    background-color: #a5bdce;
     position: fixed;
     top: 0;
     left: 0;
