--- a/ankiety-frontend/src/app/shared/navbar/navbar.component.html
+++ b/ankiety-frontend/src/app/shared/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <div class="constant-margin">
 <nav class="navbar custom-navbar" id="navbar">
-    <a class="navbar-brand text-white" routerLink="">Ankiety Online</a>
+    <a class="navbar-brand text-white" routerLink="">System ankietowy</a>
     <div class="row">
-        <span class="username">Użytkownik: {{getUserEmail()}}</span>
+        <span class="username">{{getUserEmail()}}</span>
         <button class="nav_btn" (click)="onChangePassword()" title="Zmień hasło">
             <mat-icon class="icon">vpn_key</mat-icon>
         </button>
