--- a/ankiety-frontend/src/app/surveys/survey-list/survey-list.component.html
+++ b/ankiety-frontend/src/app/surveys/survey-list/survey-list.component.html
@@ -1,21 +1,16 @@
 <div class="container">
   <div *ngIf="!loading">
-    <div class="row btn-add">
-      <div class="col-sm">
-        <button class="btn btn-success" (click)="openDialog()">
-            <mat-icon class="plus">add_circle_outline</mat-icon>
-            Dodaj ankietę
-        </button>
-      </div>
+    <div class="card-group">
+        <div class="card border-add d-flex" title="Dodaj ankietę" role="button" (click)="openDialog()">
+          <mat-icon class="plus">add_circle_outline</mat-icon>
+        </div>
+        <div *ngIf="surveys == null || surveys?.length == 0">
+          <app-survey [survey]="noSurveys"></app-survey>
+        </div>
+        <div *ngFor="let survey of surveys">
+          <app-survey [survey]="survey"></app-survey>
+        </div>
     </div>
-
-    <div *ngIf="surveys == null || surveys?.length == 0">
-      <app-survey [survey]="noSurveys"></app-survey>
-    </div>
-
-    <div class="row">
-      <div *ngFor="let survey of surveys" class="col-sm-6">
-        <app-survey [survey]="survey"></app-survey>
-      </div>
-    </div>
+      
   </div>
+</div>
