--- a/ankiety-frontend/src/app/invitations/invitations.component.html
+++ b/ankiety-frontend/src/app/invitations/invitations.component.html
@@ -50,7 +50,7 @@
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns:displayedColumns;"></mat-row>
+    <mat-row *matRowDef="let row; columns:displayedColumns; " (click)="onInvitationClick(row)"></mat-row>
   </mat-table>
   <mat-paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" showFirstLastButtons></mat-paginator>
 </div>
