--- a/ankiety-frontend/src/app/surveys/survey-details/survey-details.component.html
+++ b/ankiety-frontend/src/app/surveys/survey-details/survey-details.component.html
@@ -12,8 +12,8 @@
   </div>
 
   <p>{{survey?.description}}</p>
-<!--  <p>Liczba wysłanych zaproszeń: {{survey?.sentInvitations}}</p>-->
-<!--  <p *ngIf="survey?.sentInvitations != 0">Liczba wypełnionych ankiet: {{survey?.filledInvitations}}</p>-->
+  <p>Liczba wysłanych zaproszeń: {{survey?.sentInvitations}}</p>
+  <p *ngIf="survey?.sentInvitations != 0">Liczba wypełnionych ankiet: {{survey?.filledInvitations}}</p>
 
   <div class="row">
     <div class="col">
