--- a/ankiety-frontend/src/app/app.component.css
+++ b/ankiety-frontend/src/app/app.component.css
@@ -1,5 +1,5 @@
 .image{
-    height: auto;
+    height: 100%;
     width: 100%;
     background-image: linear-gradient(to bottom, rgba(255,255,255,0.2) 0%,rgba(255,255,255,0.2) 100%), url('../app/shared/images/pexels-pixabay-373076.jpg');;
     background-color: rgba(200,200,200,0.3);
