--- a/ankiety-frontend/src/app/surveys/fill/fill.component.css
+++ b/ankiety-frontend/src/app/surveys/fill/fill.component.css
@@ -12,11 +12,41 @@
 }
 
 .progress-bar {
-    background-color: #0e4dac;
+    background-color: #63A4FF;
 }
 
 #timer {
     position: absolute;
     top: 75px;
     right: 25px;
+}
+
+.custom-button {
+	border-radius: 20px;
+	border: 1px solid #63A4FF;
+	background-color:#63A4FF;
+	color: #FFFFFF;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 12px 45px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	transition: transform 80ms ease-in;
+}
+
+.confirm-button {
+	border-radius: 20px;
+	border: 1px solid #008000;
+	background-color:#008000;
+	color: #FFFFFF;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 12px 45px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	transition: transform 80ms ease-in;
+}
+
+button {
+  margin: 20px;
 }
