--- a/ankiety-frontend/src/app/surveys/new-survey/new-survey.component.css
+++ b/ankiety-frontend/src/app/surveys/new-survey/new-survey.component.css
@@ -1,3 +1,22 @@
 .space {
   margin: 10px 50px 0px 10px;
 }
+
+.mat-dialog-title{
+  display:flex;
+  justify-content: space-between;
+}
+.mat-icon{
+  position: relative;
+}
+
+.close-button{
+  background-color: transparent;
+  border: 25px;
+
+}
+
+.d-flex{
+  align-items: center;
+  justify-content: center;
+}
