--- a/ankiety-frontend/src/app/surveys/survey-list/survey-list.component.css
+++ b/ankiety-frontend/src/app/surveys/survey-list/survey-list.component.css
@@ -1,22 +1,40 @@
 .plus{
     position: relative;
-    transform: scale(2.5);
+    transform: scale(1.3);
     color: azure;
 }
 
-.plus:hover{
-    transform: scale(3);
+.text-white{
+    color: azure !important;
+    font-size: 18px;
 }
+
 
 .d-flex{
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 
-.border-add{
+.btn-add{
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 15px;
+}
+
+.border-add:hover{
+    background-color: #9c9898e1;
+    border-color:  #a8a8a89c !important;   
+}
+
+.border-add{  
     background-color: #a8a8a8e1;
-    border-color:  #a8a8a89c;
-    min-width: 5rem;
-    max-width: 10rem;
+    border-color:  #a8a8a8de !important;
+    width: 12rem;
+    height: 3.5rem;
     border-radius: 25px !important;
 }
+
+.card-header{
+    font-size: 18px;
+    color: #4c8bb8d2 !important;
+  }
