--- a/ankiety-frontend/src/app/surveys/survey-list/survey-list.component.html
+++ b/ankiety-frontend/src/app/surveys/survey-list/survey-list.component.html
@@ -1,16 +1,25 @@
 <div class="container">
   <div *ngIf="!loading">
-    <div class="card-group">
-        <div class="card border-add d-flex" title="Dodaj ankietę" role="button" (click)="openDialog()">
-          <mat-icon class="plus">add_circle_outline</mat-icon>
-        </div>
+    <div class="row btn-add">
+      <button class="btn border-add d-flex" role="button" (click)="openDialog()">
+        <div class="text-white">Dodaj ankietę</div>
+        <mat-icon class="plus">add_circle_outline</mat-icon>
+      </button>
+    </div>
+    <div class="row">
+      <div class="card-group">        
         <div *ngIf="surveys == null || surveys?.length == 0">
-          <app-survey [survey]="noSurveys"></app-survey>
+          <div class="card border-info" style="width: 30rem; height: 9rem;" (click)="onDetailsClick()">
+            <div class="card-header">Brak utworzonych ankiet</div>
+            <div class="card-body">
+              <p class="text-truncate">Naciśnij przycisk "Dodaj ankietę", aby dodać ankiete.</p>
+            </div>
+          </div>
         </div>
         <div *ngFor="let survey of surveys">
           <app-survey [survey]="survey"></app-survey>
         </div>
+      </div>
     </div>
-      
   </div>
 </div>
