--- a/ankiety-frontend/src/styles.css
+++ b/ankiety-frontend/src/styles.css
@@ -4,17 +4,14 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 mat-card {
     color: #000 !important;
-    background-color: white !important;
-    border-top: rgb(112, 112, 112) 1px solid;
-    border-left: rgb(112, 112, 112) 1px solid;
-    border-right: #255255 3px solid;
-    border-bottom: #255255 3px solid;
+    background-color: rgba(255, 255, 255, 0.6) !important;
+    border:  #a8a8a8e1 1px solid;
     margin-top: 5px;
     margin-bottom: 5px;
 }
 
 mat-card:hover {
-    background-color: rgba(105, 130, 133, 0.808) !important;
+    background-color: #e8e8e8 !important;
 }
 
 
