Front-end invitations i users list

--- a/ankiety-frontend/src/app/surveys/survey-details/survey-details.component.html
+++ b/ankiety-frontend/src/app/surveys/survey-details/survey-details.component.html
@@ -42,7 +42,7 @@
             <mat-icon>edit</mat-icon>
           </button>
           <button mat-icon-button class="mat_btn" title="Usuń" (click)="onDeleteQuestionClick(question)">
-            <mat-icon>delete_outline</mat-icon>
+            <mat-icon>delete</mat-icon>
           </button>          
         </div>
       </mat-card-title>
