--- a/ankiety-frontend/src/app/user/users-list/users-list.component.css
+++ b/ankiety-frontend/src/app/user/users-list/users-list.component.css
@@ -1,4 +1,14 @@
-mat-icon:hover{
-    cursor: pointer;
-    color: rgba(255, 255, 255, 0.6);
+
+.container{
+    width: 100%;
+    height:100%;
+    background-color: #e8e8e8c7;
+}
+
+input {
+	background-color: rgba(255, 255, 255, 0.756);
+	border: none;
+	padding: 12px 15px;
+	margin: 8px 0;
+	width: 100%;
 }
